# routes/customers.js
@@ -50,10 +50,10 @@ router.get('/', function(req, res, next) {
                                     customers.title, 
                                     customers.company_name, 
                                     CONCAT(create_users.first_name, ' ', create_users.last_name) as created_by,
-                                    customers.create_datetime,
+                                    customers.create_datetime as created_datetime,
                                     create_users.image_link as created_image_link, 
                                     CONCAT(update_users.first_name, ' ', update_users.last_name) as updated_by,
-                                    customers.update_datetime,
+                                    customers.update_datetime as updated_datetime,
                                     update_users.image_link as updated_image_link
                             FROM    customers
                             JOIN	users as create_users
@@ -97,10 +97,10 @@ router.get('/:customer_id', function(req, res, next) {
                                     customers.title, 
                                     customers.company_name, 
                                     CONCAT(create_users.first_name, ' ', create_users.last_name) as created_by,
-                                    customers.create_datetime,
+                                    customers.create_datetime as created_datetime,
                                     create_users.image_link as created_image_link, 
                                     CONCAT(update_users.first_name, ' ', update_users.last_name) as updated_by,
-                                    customers.update_datetime,
+                                    customers.update_datetime as updated_datetime,
                                     update_users.image_link as updated_image_link
                             FROM    customers
                             JOIN	users as create_users
