# routes/interviews.js
@@ -46,10 +46,10 @@ router.get('/', function(req, res, next) {
                                     interviews.title, 
                                     interviews.notes, 
                                     CONCAT(create_users.first_name, ' ', create_users.last_name) as created_by,
-                                    interviews.create_datetime,
+                                    interviews.create_datetime as created_datetime,
                                     create_users.image_link as created_image_link, 
                                     CONCAT(update_users.first_name, ' ', update_users.last_name) as updated_by,
-                                    interviews.update_datetime,
+                                    interviews.update_datetime as updated_datetime,
                                     update_users.image_link as updated_image_link
                             FROM 	interviews
                             JOIN	users as create_users
@@ -85,14 +85,14 @@ router.get('/:interview_id', function(req, res, next) {
                 return next(err);
             }
             else {
-                conn.query(`SELECT 	interviews.id AS interview_id, 
+                conn.query(`SELECT 	interviews.id, 
                                     interviews.title, 
                                     interviews.notes, 
                                     CONCAT(create_users.first_name, ' ', create_users.last_name) as created_by,
-                                    interviews.create_datetime,
+                                    interviews.create_datetime as created_datetime,
                                     create_users.image_link as created_image_link, 
                                     CONCAT(update_users.first_name, ' ', update_users.last_name) as updated_by,
-                                    interviews.update_datetime,
+                                    interviews.update_datetime as updated_datetime,
                                     update_users.image_link as updated_image_link
                             FROM 	interviews
                             JOIN	users as create_users
@@ -136,11 +136,11 @@ router.get('/interview_customer/:interview_id', function(req, res, next) {
                                     customers.title, 
                                     customers.company_name, 
                                     CONCAT(create_users.first_name, ' ', create_users.last_name) as created_by,
-                                    customers.create_datetime,
+                                    customers.create_datetime as created_datetime,
                                     create_users.image_link as created_image_link, 
                                     CONCAT(update_users.first_name, ' ', update_users.last_name) as updated_by,
-                                    customers.update_datetime,
-                                    update_users.image_link as updated_image_link 
+                                    customers.update_datetime as updated_datetime,
+                                    update_users.image_link as updated_image_link
                             FROM 	customers
                             JOIN	interview_customer
                                 ON	customers.id = interview_customer.interview_id
